{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 10,
  "lineage": "50e2bd6d-65b9-8357-af2b-cd879a8aaa7f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab6f6340b2a4fb77",
            "arn": "arn:aws:ec2:ca-central-1:910702143091:instance/i-0f60c0e23adf4dd48",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f60c0e23adf4dd48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "key_AWS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0598918dbfcacdf67",
            "private_dns": "ip-10-0-1-69.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.69",
            "public_dns": "ec2-35-182-225-188.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.182.225.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026597d0b04082457",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "10.0.1.100",
              "10.0.1.200"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcad9a6661eb2c1c",
            "tags": {
              "Name": "server_terraform"
            },
            "tags_all": {
              "Name": "server_terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f97e17a2139c6d05"
            ]
          },
          "dependencies": [
            "aws_key_pair.my-key",
            "aws_security_group.my-server-sg",
            "aws_subnet.my-subnet",
            "aws_vpc.my-vpc",
            "data.aws_ami.ubuntu",
            "data.template_file.userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:910702143091:internet-gateway/igw-07d34d6ead3cdadd4",
            "id": "igw-07d34d6ead3cdadd4",
            "owner_id": "910702143091",
            "tags": {
              "Name": "igw_terraform"
            },
            "tags_all": {
              "Name": "igw_terraform"
            },
            "vpc_id": "vpc-050bb4a0504b871f2"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:910702143091:route-table/rtb-0c7c387a7838d1078",
            "id": "rtb-0c7c387a7838d1078",
            "owner_id": "910702143091",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d34d6ead3cdadd4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_terraform"
            },
            "tags_all": {
              "Name": "rt_terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-050bb4a0504b871f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0715c47959f1e8d9d",
            "route_table_id": "rtb-0c7c387a7838d1078",
            "subnet_id": "subnet-0dcad9a6661eb2c1c"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rt",
            "aws_subnet.my-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:910702143091:security-group/sg-0f97e17a2139c6d05",
            "description": "Allow server acces with SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f97e17a2139c6d05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server access",
            "name_prefix": "",
            "owner_id": "910702143091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "server-sg-terraform"
            },
            "tags_all": {
              "Name": "server-sg-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-050bb4a0504b871f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:910702143091:subnet/subnet-0dcad9a6661eb2c1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcad9a6661eb2c1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910702143091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_terraform"
            },
            "tags_all": {
              "Name": "subnet_terraform"
            },
            "vpc_id": "vpc-050bb4a0504b871f2"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:910702143091:vpc/vpc-050bb4a0504b871f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b6284f227d8ba9f",
            "default_route_table_id": "rtb-046b06d743c189d2f",
            "default_security_group_id": "sg-0452ca25473719244",
            "dhcp_options_id": "dopt-08c0f5e1de54107c9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050bb4a0504b871f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046b06d743c189d2f",
            "owner_id": "910702143091",
            "tags": {
              "Name": "vpc_terraform"
            },
            "tags_all": {
              "Name": "vpc_terraform"
            }
          }
        }
      ]
    }
  ]
}